# cpp-invoke-python

./: .gitignore  CMakeLists.txt  ConsoleApplication1.cpp  PythonTest.py  README.md  cpp_python.cpp  cpp_sys.cpp  demo.cpp  demo2.cpp  great_function_from_python.cpp  great_module.py  test_add.cpp
notebook/: issues.md  pypackage.txt
test/: test.py
